5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1771_1183.log
== TEST (2019-05-22 00:11:30) 
-- CODE:
vetor = array(eval(input("digite o vetor: ")), dtype = int)
i = 0
valor = 0
soma_negativos = 0
while(i < size(vetor)):
	if(vetor[i]<0):
		valor = 1
	else:
		valor = 0
	soma_negativos = soma_negativos + valor
	i = i + 1
print(soma_negativos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = array(eval(input()), dtype = int)
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 00:11:49) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")), dtype = int)
i = 0
valor = 0
soma_negativos = 0
while(i < size(vetor)):
	if(vetor[i]<0):
		valor = 1
	else:
		valor = 0
	soma_negativos = soma_negativos + valor
	i = i + 1
print(soma_negativos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:41:55) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")), dtype = int)
i = 0
v = 0
while(i<vetor[i]):
	if(vetor[i]>0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:44:06) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")), dtype = int)
i = 0
v = 0
while(i<vetor[i]):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:45:35) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<vetor[i]):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:46:16) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<vetor[i]):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:18:11) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<vetor[i]):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:18:25) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<vetor[i]):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:19:00) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<vetor[i]):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:19:19) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<vetor[i]):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:19:34) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<=vetor[i]):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:20:11) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<vetor[i]):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:20:18) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<vetor[i]):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:21:16) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<vetor[i]):
	if(vetor[i]=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)


-- ERROR:
File "XXXX", line 6
    if(vetor[i]=0):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:21:24) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<vetor[i]):
	if(vetor[i]==0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:22:47) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:23:00) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:54:44) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		vetor.remove(vetor[i])
print(vetor)
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:56:32) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		vetor[i] = vetor[]
	
print(vetor)
 

-- ERROR:
File "XXXX", line 7
    vetor[i] = vetor[]
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:56:47) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		vetor[i] = array([])
	
print(vetor)
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:57:46) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		vetor[i] = " "
print(vetor)
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:58:05) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		vetor[i] = " "
	i = i + 1
print(vetor)
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 23:59:35) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	vetor[i] = str(vetor[i])
	if(vetor[i]<0):
		vetor[i] = " "
	i = i + 1
print(vetor)
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:00:37) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		vetor[i] = 0
	i = i + 1
print(vetor)
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:00:46) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		vetor[i] = 0
	i = i + 1
print(vetor)
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:01:15) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]<0):
		vetor[i] = ""
	i = i + 1
print(vetor)
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:04:24) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	vetor[i] = str(vetor[i])
	if(vetor[i]<0): 
		vetor[i] = ""
	i = i + 1
print(vetor)
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:04:58) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	vetor[i] = eval(vetor[i])
	if(vetor[i]<0): 
	vetor[i] = ""
	i = i + 1
print(vetor)
 

-- ERROR:
File "XXXX", line 8
    vetor[i] = ""
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:05:16) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
v = 0
while(i<size(vetor)):
	vetor[i] = eval(vetor[i])
	if(vetor[i]<0): 
		vetor[i] = ""
	i = i + 1
print(vetor)
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:12:00) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
z = 0
while(i2<v):
	z = zeros(v,dtype = int)
 	if(vetor[i] >= 0):
		z[i] = vetor[i]
print(z)

-- ERROR:
File "XXXX", line 17
    if(vetor[i] >= 0):
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:12:35) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
z = 0
while(i2<v):
	z = zeros(v,dtype = int)
	if(vetor[i] >= 0):
		z[i] = vetor[i]
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:13:21) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
z = 0
while(i2<v):
	z = zeros(v+1,dtype = int)
	if(vetor[i] >= 0):
		z[i] = vetor[i]
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:16:34) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
z = zeros(v,dtype = int)
while(i2<v):
	if(vetor[i2] >= 0):
		z[i2] = vetor[i2]
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:17:11) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
z = zeros(v,dtype = int)
while(i2<v):
	if(vetor[i2] >= 0):
		z[i2] = vetor[i2]
	i2 = i2 + 1 
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:19:41) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
z = zeros(v,dtype = int)
while(i2<v):
	if(vetor[i2] >= 0):
		z[i2] = vetor[i2]
	i2 = i2 + 1 
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:19:54) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
z = zeros(v,dtype = int)
while(i2<v):
	if(vetor[i2] >= 0):
		z[i2] = vetor[i2]
	i2 = i2 + 1 
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:42:24) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0

z = zeros(v,dtype = int)
while(i2<v):
	if(vetor[i2] >= 0):
		print(vetor[i2])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:42:28) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0

z = zeros(v,dtype = int)
while(i2<v):
	if(vetor[i2] >= 0):
		print(vetor[i2])

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:44:07) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0

z = zeros(v,dtype = int)
while(i2<v):
	if(vetor[i2] >= 0):
		print(vetor[i2])
	i2 = i2 + 1

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:45:05) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0

z = zeros(v,dtype = int)
while(i2<size(vetor)):
	if(vetor[i2] >= 0):
		print(vetor[i2])
	i2 = i2 + 1

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 00:59:23) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
i3 = 0
z = array(v, dtype = int)
while(i3<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
	else:
		i2 = i2 + 1
		i3 = i3 + 0
print(z)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 01:01:26) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
i3 = 0
z = array(v, dtype = int)
while(i2<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
	else:
		i2 = i2 + 1
		i3 = i3 + 0
print(z)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 01:02:11) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
i3 = 0
z = array(v, dtype = int)
while(i2<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
		print(z)
	else:
		i2 = i2 + 1
		i3 = i3 + 0
		print(Z)
print(z)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 01:03:37) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
i3 = 0
z = zeros(v, dtype = int)
while(i2<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
	else:
		i2 = i2 + 1
		i3 = i3 + 0
print(z)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 01:03:51) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
i3 = 0
z = zeros(v, dtype = int)
while(i2<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
	else:
		i2 = i2 + 1
		i3 = i3 + 0
print(z)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 01:04:48) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
i3 = 0
z = zeros(v, dtype = int)
while(i3<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
	else:
		i2 = i2 + 1
		i3 = i3 + 0
print(z)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 01:04:58) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
i3 = 0
z = zeros(v, dtype = int)
while(i3<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
	else:
		i2 = i2 + 1
		i3 = i3 + 0
print(z)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 01:05:20) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
i3 = 0
z = zeros(v, dtype = int)
while(i3<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
	else:
		i2 = i2 + 1
		i3 = i3 + 0
print(z)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 01:06:55) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
i3 = 0
z = zeros(v, dtype = int)
while(i3<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
	else:
		i2 = i2 + 1
		i3 = i3 + 0
print(z)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 01:07:36) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
i3 = 0
z = zeros(v, dtype = int)
while(i3<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
	else:
		i2 = i2 + 1
		i3 = i3 + 0
print(z)





-- EXECUTION TIME:
0.514651
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
1
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
3
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
4
[18 32 14 25]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 01:07:44) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
print(v)
i2 = 0
i3 = 0
z = zeros(v, dtype = int)
while(i3<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
	else:
		i2 = i2 + 1
		i3 = i3 + 0
print(z)





-- EXECUTION TIME:
0.416546
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
1
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
3
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
4
[18 32 14 25]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 01:07:56) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0
i2 = 0
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
i2 = 0
i3 = 0
z = zeros(v, dtype = int)
while(i3<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
	else:
		i2 = i2 + 1
		i3 = i3 + 0
print(z)





-- EXECUTION TIME:
0.392994
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:34:57) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0  #[1,5,6,-1,-2] ===> [1,5,6]
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
i2 = 0
i3 = 0
z = zeros(v, dtype = int)
while(i3<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1
		i3 = i3 + 1
	else:
		i2 = i2 + 1
		i3 = i3 + 0
print(z)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:36:56) 
-- CODE:
from numpy import *
vetor = array(eval(input("digite o vetor: ")))
i = 0  #[1,5,6,-1,-2] ===> [1,5,6]
v = 0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v = v + 1
	else:
		v = v + 0
	i = i + 1
i2 = 0
i3 = 0
z = zeros(v, dtype = int)
while(i3<v):
	if(vetor[i2] >= 0):
		z[i3] = vetor[i2]
		i2 = i2 + 1

	else:
		i2 = i2 + 1
	
print(z)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
